--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,7 @@ tools:context=".LoginActivity">
         android:text="@string/app_title"
         android:textSize="24sp"
         android:textColor="@android:color/white"
-        android:background="@color/primary"
+        android:background="@color/primary_dark"
         />
 
     <ImageView
