--- a/app/src/main/res/layout/fragment_informations.xml
+++ b/app/src/main/res/layout/fragment_informations.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.jacoli.roadsitesupervision.InformationsFragment">
+    tools:context="com.jacoli.roadsitesupervision.InformationFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
