--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,6 @@
     <dimen name="pz_button_horizontal_margin">10dp</dimen>
     <dimen name="pz_button_vertical_margin">20dp</dimen>
     <dimen name="pz_button_size">128dp</dimen>
+
+    <dimen name="text_view_padding">5dp</dimen>
 </resources>
