--- a/app/src/main/res/layout/activity_sampling_inspection.xml
+++ b/app/src/main/res/layout/activity_sampling_inspection.xml
@@ -5,8 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:focusable="true"
-    android:focusableInTouchMode="true"
     tools:context="com.jacoli.roadsitesupervision.SamplingInspectionActivity">
 
     <com.jacoli.roadsitesupervision.views.TitleBar
@@ -14,49 +12,65 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/name_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:padding="5dp"
-        android:text="工序部位：" />
-
-    <View android:layout_height="2dp"
-        android:layout_width="match_parent"
-        android:layout_marginBottom="10dp"
-        android:background="@color/divider"/>
-
-    <TextView
-        android:textSize="18sp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingStart="20dp"
-        android:id="@+id/textView"
-        android:text="抽检情况："/>
-
-    <requestFocus />
-
-    <EditText
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
-        android:padding="10dp"
-        android:id="@+id/editText"
-        android:singleLine="false"
-        android:gravity="top"
-        android:inputType="textMultiLine"
-        android:scrollbars="vertical"
-        android:hint="请输入巡视情况"
-        />
+        android:layout_weight="1">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_margin="5dp"
-        android:layout_weight="3"
-        />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:orientation="vertical"
+            android:focusable="true"
+            android:focusableInTouchMode="true">
+
+            <TextView
+                android:id="@+id/name_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:padding="10dp"
+                android:text="工序部位：" />
+
+            <View android:layout_height="2dp"
+                android:layout_width="match_parent"
+                android:layout_marginBottom="10dp"
+                android:background="@color/divider"/>
+
+            <TextView
+                android:textSize="18sp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:id="@+id/textView"
+                android:text="抽检情况："/>
+
+            <requestFocus />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:padding="10dp"
+                android:id="@+id/editText"
+                android:singleLine="false"
+                android:gravity="top"
+                android:inputType="textMultiLine"
+                android:scrollbars="vertical"
+                android:hint="请输入巡视情况"
+                />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="64dp"
+                android:layout_marginTop="20dp"
+                />
+
+        </LinearLayout>
+
+    </ScrollView>
 
     <Button
         android:layout_width="164dp"
