--- a/app/src/main/res/layout/weather_temperature_layout.xml
+++ b/app/src/main/res/layout/weather_temperature_layout.xml
@@ -20,9 +20,9 @@
 
     <EditText
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_weight="1"
-        android:layout_marginEnd="20dp"
+        android:textSize="14sp"
         android:id="@+id/edit_text_weather"
         android:maxLines="1"
         android:singleLine="true"/>
@@ -36,8 +36,9 @@
 
     <EditText
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_weight="1"
+        android:textSize="14sp"
         android:inputType="numberDecimal"
         android:id="@+id/edit_text_temperature"
         android:maxLines="1"
@@ -46,7 +47,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="30dp"
+        android:layout_marginEnd="15dp"
         android:textSize="16sp"
         android:padding="5dp"
         android:text="℃" />
