--- a/app/src/main/res/layout/activity_unit_project_detail.xml
+++ b/app/src/main/res/layout/activity_unit_project_detail.xml
@@ -29,7 +29,9 @@
             <TextView
                 android:id="@+id/project_name_text"
                 android:layout_width="match_parent"
-                android:layout_height="32dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
                 android:textSize="20sp"
                 android:text="旁站情况：" />
 
