--- a/app/src/main/res/layout/pz_detail_array_edit_view.xml
+++ b/app/src/main/res/layout/pz_detail_array_edit_view.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <EditText xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="30dp"
+    android:layout_height="40dp"
     android:minWidth="90dp"
-    android:gravity="center"
-    android:padding="10dp"
+    android:padding="5dp"
+    android:gravity="end"
+    android:paddingEnd="10dp"
     android:id="@+id/edit_text"
     android:layout_gravity="center_vertical"
     android:maxLines="1"
+    android:hint="请输入"
     android:singleLine="true" />
