--- a/app/src/main/res/layout/pz_detail_int_double_double_row_layout.xml
+++ b/app/src/main/res/layout/pz_detail_int_double_double_row_layout.xml
@@ -21,10 +21,11 @@
         <EditText
             android:layout_width="0dp"
             android:layout_height="40dp"
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:layout_gravity="center_vertical"
             android:layout_margin="5dp"
-            android:layout_marginEnd="0dp"
+            android:gravity="end"
+            android:paddingEnd="10dp"
             android:padding="5dp"
             android:id="@+id/edit_text1"
             android:inputType="number|numberSigned"
@@ -37,17 +38,24 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:layout_gravity="center_vertical"
-            android:paddingEnd="10dp"
-            android:textSize="14sp"
-            android:text="(数值范围1-4)"
+            android:textSize="18sp"
+            android:text="单位"
+            android:id="@+id/text1"
             />
+    </LinearLayout>
+
+    <LinearLayout android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <EditText
             android:layout_width="0dp"
             android:layout_height="40dp"
-            android:layout_weight="3"
+            android:layout_weight="1"
             android:layout_gravity="center_vertical"
             android:layout_margin="5dp"
+            android:gravity="end"
+            android:paddingEnd="10dp"
             android:padding="5dp"
             android:id="@+id/edit_text2"
             android:inputType="numberDecimal|numberSigned"
@@ -55,19 +63,45 @@
             android:maxLines="1"
             android:singleLine="true"/>
 
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:layout_gravity="center_vertical"
+            android:textSize="18sp"
+            android:text="单位"
+            android:id="@+id/text2"
+            />
+    </LinearLayout>
+
+    <LinearLayout android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
         <EditText
             android:layout_width="0dp"
             android:layout_height="40dp"
-            android:layout_weight="3"
+            android:layout_weight="1"
             android:layout_gravity="center_vertical"
             android:layout_margin="5dp"
             android:padding="5dp"
+            android:gravity="end"
+            android:paddingEnd="10dp"
             android:id="@+id/edit_text3"
-            android:inputType="number|numberSigned"
+            android:inputType="numberDecimal|numberSigned"
             android:hint="请输入"
             android:maxLines="1"
             android:singleLine="true"/>
 
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:layout_gravity="center_vertical"
+            android:textSize="18sp"
+            android:text="单位"
+            android:id="@+id/text3"
+            />
     </LinearLayout>
 
 
