--- a/app/src/main/res/layout/pz_detail_int_input_row_layout.xml
+++ b/app/src/main/res/layout/pz_detail_int_input_row_layout.xml
@@ -18,10 +18,12 @@
 
     <EditText
         android:layout_width="0dp"
-        android:layout_height="30dp"
+        android:layout_height="40dp"
         android:layout_weight="1"
         android:layout_gravity="center_vertical"
         android:padding="5dp"
+        android:gravity="end"
+        android:paddingEnd="10dp"
         android:id="@+id/edit_text"
         android:inputType="number"
         android:hint="请输入"
