--- a/app/src/main/res/layout/activity_assigned_matter_detail.xml
+++ b/app/src/main/res/layout/activity_assigned_matter_detail.xml
@@ -13,11 +13,34 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/title_bar"
+        android:orientation="vertical"
+        android:id="@+id/subject_layout">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:textColor="@color/primary_text"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:id="@+id/text_view_subject"
+            />
+
+        <include layout="@layout/cell_separator"/>
+    </LinearLayout>
+
+
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/submit_btn"
-        android:layout_below="@+id/title_bar"
+        android:layout_below="@+id/subject_layout"
         android:id="@+id/listView"
         />
 
