--- a/app/src/main/res/layout/fragment_todolist_list.xml
+++ b/app/src/main/res/layout/fragment_todolist_list.xml
@@ -3,10 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/listView"
+
         />
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/id_swipe_ly"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/listView"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
