--- a/app/src/main/res/layout/activity_assigned_matter_create.xml
+++ b/app/src/main/res/layout/activity_assigned_matter_create.xml
@@ -41,6 +41,32 @@
                     android:gravity="center_vertical"
                     android:textSize="18sp"
                     android:textColor="@color/primary_text"
+                    android:text="类型:"
+                    />
+
+                <Spinner
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:id="@+id/spinner0"
+                    android:paddingStart="24dp"
+                    />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="64dp"
+                    android:layout_height="@dimen/cell_height"
+                    android:gravity="center_vertical"
+                    android:textSize="18sp"
+                    android:textColor="@color/primary_text"
                     android:text="主题:"
                     />
 
