--- a/app/src/main/res/layout/activity_assigned_matter_create.xml
+++ b/app/src/main/res/layout/activity_assigned_matter_create.xml
@@ -17,12 +17,13 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_below="@+id/title_bar"
-        android:layout_above="@+id/submit_btn">
+        android:layout_alignParentBottom="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
+            android:paddingBottom="64dp"
             android:orientation="vertical"
             android:focusable="true"
             android:focusableInTouchMode="true">
@@ -201,21 +202,16 @@
                 android:layout_marginBottom="20dp"
                 />
 
-            <View android:layout_height="64dp"
-                android:layout_width="match_parent"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/cell_height"
+                android:layout_margin="16dp"
+                android:background="@color/accent"
+                android:text="发送"
+                android:id="@+id/submit_btn" />
 
         </LinearLayout>
 
     </ScrollView>
-
-    <Button
-        android:layout_width="164dp"
-        android:layout_height="40dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="16dp"
-        android:background="@color/accent"
-        android:text="发送"
-        android:id="@+id/submit_btn" />
 
 </RelativeLayout>
