--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,10 +4,43 @@
     android:layout_height="match_parent"
     tools:context="com.jacoli.roadsitesupervision.SettingsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="设置" />
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:orientation="vertical"
+            android:focusable="true"
+            android:focusableInTouchMode="true">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="128dp"
+                android:gravity="center"
+                android:textSize="28sp"
+                android:textColor="@color/primary_text"
+                android:text="登录账号"
+                android:id="@+id/text_view_account"
+                />
+
+            <include layout="@layout/cell_separator"/>
+
+            <View android:layout_height="180dp"
+                android:layout_width="match_parent"/>
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/cell_height"
+                android:layout_margin="16dp"
+                android:background="@color/bg_delete_btn_normal"
+                android:text="注销"
+                android:id="@+id/submit_btn" />
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </FrameLayout>
